--- a/scorm-builder/templates/topic-template.html
+++ b/scorm-builder/templates/topic-template.html
@@ -393,8 +393,7 @@
                                             Instructions
                                         </h5>
                                         <div class="prose prose-lg max-w-none">
-                                            <p class="text-gray-700 leading-relaxed">{{instructions}}</p>
-                                        </div>
+                                            <p class="text-gray-700 leading-relaxed whitespace-pre-line">{{{instructions}}}</p>                                        </div>
                                     </div>
                                     
                                    <!-- Code Block (if present) -->
